Feedback changes http://joxi.ru/bmoRXzGixyPJnr

--- a/dashboard-investment-profile-individual-step1.html
+++ b/dashboard-investment-profile-individual-step1.html
@@ -217,7 +217,7 @@
 					<div class="dashboard-investment-row">
 						<span class="invest-title">Details</span>
 						<div class="row profile-details-row">
-							<div class="col-lg-3 correct">
+							<div class="col-xl-3 col-lg-6 correct">
 								<label for="lbl5">Type</label>
 								<select id="lbl5">
 									<option value="">Individual</option>
@@ -226,7 +226,7 @@
 									<option value="">Individual</option>
 								</select>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<label for="lbl15">Title</label>
 								<select id="lbl15">
 									<option value="">Title</option>
@@ -235,13 +235,13 @@
 									<option value="">Title</option>
 								</select>
 							</div>
-							<div class="col-lg-3 error">
+							<div class="col-xl-3 col-lg-6 error">
 								<div class="profile-detail-input">
 									<input type="text" id="lbl6">
 									<label for="lbl6">*Given Name</label>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<div class="profile-detail-input">
 									<input type="text" id="lbl8">
 									<label for="lbl8">Middle name</label>
@@ -249,13 +249,13 @@
 							</div>
 						</div>
 						<div class="row profile-details-row">
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<div class="profile-detail-input">
 									<input type="text" id="lbl9">
 									<label for="lbl9">Surname</label>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<label for="lbl10">Applicant Number Type</label>
 								<select id="lbl10">
 									<option value="">Applicant Number Type</option>
@@ -264,7 +264,7 @@
 									<option value="">Applicant Number Type</option>
 								</select>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<div class="profile-detail-input">
 									<input type="number" id="lbl11">
 									<label for="lbl11">Number</label>
@@ -275,7 +275,7 @@
 					<div class="dashboard-investment-row">
 						<span class="invest-title">POSTAL ADDRESS</span>
 						<div class="row profile-details-row">
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<label for="lbl12">*Country</label>
 								<select id="lbl12">
 									<option value="">Individual</option>
@@ -284,13 +284,13 @@
 									<option value="">Individual</option>
 								</select>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<div class="profile-detail-input">
 									<input type="text" id="lbl13">
 									<label for="lbl13">*Street Number & Name</label>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<div class="profile-detail-input">
 									<input type="text" id="lbl14">
 									<label for="lbl14">*Suburb, City or Town</label>
@@ -298,7 +298,7 @@
 							</div>
 						</div>
 						<div class="row profile-details-row">
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<label for="lbl16">*State</label>
 								<select id="lbl16">
 									<option value="">State</option>
@@ -307,7 +307,7 @@
 									<option value="">State</option>
 								</select>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-xl-3 col-lg-6">
 								<div class="profile-detail-input">
 									<input type="number" id="lbl17">
 									<label for="lbl17">*Postcode</label>
