--- a/dashboard-investment-profile-individual-step2.html
+++ b/dashboard-investment-profile-individual-step2.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -255,25 +255,25 @@
 						<span class="invest-title" style="margin-bottom: 25px;"><span>STEP 2.</span> VERIFY YOUR IDENTIFICATION</span>
 						<div class="dashboard-investment-row">
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl1">
 										<label for="lbl1">*First Name</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl2">
 										<label for="lbl2">Middle name</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl3">
 										<label for="lbl3">*Surname</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl4">
 										<label for="lbl4">*Address</label>
@@ -281,11 +281,11 @@
 								</div>
 							</div>
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<input type="date" id="lbl5">
 									<label for="lbl5">*Date of Birth (dd/mm/yyyy)</label>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="email" id="lbl6">
 										<label for="lbl6">*Email</label>
@@ -295,25 +295,25 @@
 						</div>
 						<div class="dashboard-investment-row">
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="number" id="lbl7">
 										<label for="lbl7">*Unit Number</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="number" id="lbl8">
 										<label for="lbl8">*Street Number</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl9">
 										<label for="lbl9">*Street Name</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<label for="lbl10">*State</label>
 									<select id="lbl10">
 										<option value="">State</option>
@@ -324,7 +324,7 @@
 								</div>
 							</div>
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<label for="lbl11">Street Type</label>
 									<select id="lbl11">
 										<option value="">Select your street type...</option>
@@ -333,13 +333,13 @@
 										<option value="">Street Type</option>
 									</select>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl12">
 										<label for="lbl12">*Suburb, City or Town</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="number" id="lbl13">
 										<label for="lbl13">*Postcode </label>
@@ -347,7 +347,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="dashboard-investment-row">
+						<div class="dashboard-investment-row grey-bg">
 							<span class="invest-title" style="margin-bottom: 25px;">**IF YOU CANNOT COMPLETE THE STEPS ABOVE</span>
 							<h3>UPLOAD A <i>CERTIFIED</i> COPY OF EITHER YOUR <i>DRIVER'S LICENSE</i> or <i>PASSPORT</i></h3>
 							<div class="upload-input-wrapper d-flex">
