--- a/dashboard-investment-profile-make-applicaion-step1.html
+++ b/dashboard-investment-profile-make-applicaion-step1.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 					<div class="make-app-steps">
-						<span class="step-title">STEP 1. TERMS & CONDITIONS</span>
+						<span class="step-title">TERMS & CONDITIONS</span>
 						<div class="make-app-hint text-center">
 							<p>Please complete the steps below before completing the application form</p>
 						</div>
