--- a/dashboard-investment-profile-make-applicaion-step2.html
+++ b/dashboard-investment-profile-make-applicaion-step2.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 					<div class="make-app-steps">
-						<span class="step-title">STEP 2. INVESTMENT PROFILE</span>
+						<span class="step-title">INVESTMENT PROFILE</span>
 						<div class="table-wrapper table-wrapper-profile">
 							<table class="dashboard-table">
 								<thead>
@@ -277,7 +277,7 @@
 						</div>
 						<div class="dashboard-investment-row">
 							<div class="row profile-details-row">
-								<div class="col-lg-3 correct">
+								<div class="col-xl-3 col-lg-6 correct">
 									<label for="lbl5">Type</label>
 									<select id="lbl5">
 										<option value="">Individual</option>
@@ -286,7 +286,7 @@
 										<option value="">Individual</option>
 									</select>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<label for="lbl15">Title</label>
 									<select id="lbl15">
 										<option value="">Title</option>
@@ -295,13 +295,13 @@
 										<option value="">Title</option>
 									</select>
 								</div>
-								<div class="col-lg-3 error">
+								<div class="col-xl-3 col-lg-6 error">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl6">
 										<label for="lbl6">*Given Name</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl8">
 										<label for="lbl8">Middle name</label>
@@ -309,13 +309,13 @@
 								</div>
 							</div>
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl9">
 										<label for="lbl9">Surname</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<label for="lbl10">Applicant Number Type</label>
 									<select id="lbl10">
 										<option value="">Applicant Number Type</option>
@@ -324,7 +324,7 @@
 										<option value="">Applicant Number Type</option>
 									</select>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="number" id="lbl11">
 										<label for="lbl11">Number</label>
@@ -335,7 +335,7 @@
 						<div class="dashboard-investment-row">
 							<span class="invest-title">POSTAL ADDRESS</span>
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<label for="lbl12">*Country</label>
 									<select id="lbl12">
 										<option value="">Individual</option>
@@ -344,13 +344,13 @@
 										<option value="">Individual</option>
 									</select>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl13">
 										<label for="lbl13">*Street Number &amp; Name</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl14">
 										<label for="lbl14">*Suburb, City or Town</label>
@@ -358,7 +358,7 @@
 								</div>
 							</div>
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<label for="lbl16">*State</label>
 									<select id="lbl16">
 										<option value="">State</option>
@@ -367,7 +367,7 @@
 										<option value="">State</option>
 									</select>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="number" id="lbl17">
 										<label for="lbl17">*Postcode</label>
@@ -392,19 +392,19 @@
 						<div class="dashboard-investment-row">
 							<span class="invest-title">POSTAL ADDRESS</span>
 							<div class="row profile-details-row">
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="text" id="lbl19">
 										<label for="lbl19">*Contact Person</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="email" id="lbl20">
 										<label for="lbl20">*Email</label>
 									</div>
 								</div>
-								<div class="col-lg-3">
+								<div class="col-xl-3 col-lg-6">
 									<div class="profile-detail-input">
 										<input type="tel" id="lbl21">
 										<label for="lbl21">Phone</label>
