--- a/dashboard-investment-profile-make-applicaion-step3.html
+++ b/dashboard-investment-profile-make-applicaion-step3.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 					<div class="make-app-steps">
-						<span class="step-title">STEP 3. SOPISTICATED & PROFESSIONAL INVESTORS</span>
+						<span class="step-title">SOPISTICATED & PROFESSIONAL INVESTORS</span>
 						<p class="profile-text indent-none">These forms are valid for a period of 2 years whereupon a new form will need to be resubmited</p>
 						<a href="#" class="download-form-button">
 							<span>DOWNLOAD AND COMPLETE THE COMPANY VERIFICATION FORM</span>
