--- a/dashboard-investment-profile-make-applicaion-step4.html
+++ b/dashboard-investment-profile-make-applicaion-step4.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 					<div class="make-app-steps">
-						<span class="step-title">STEP 4. APPLICATION AMOUNT</span>
+						<span class="step-title">APPLICATION AMOUNT</span>
 						<div class="amount-wrapper">
 							<div class="row justify-content-between">
 								<div class="col-lg-5 amount-left">
