--- a/dashboard-investment-profile-make-applicaion-step5.html
+++ b/dashboard-investment-profile-make-applicaion-step5.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -235,7 +235,47 @@
 						</div>
 					</div>
 					<div class="make-app-steps">
-						<span class="step-title">STEP 5. SUBMIT APPLICATION</span>
+						<span class="step-title">SUBMIT APPLICATION</span>
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="table-wrapper table-wrapper-profile">
+									<table class="dashboard-table">
+										<thead>
+											<tr>
+												<th>Field</th>
+												<th>Value</th>
+											</tr>
+										</thead>
+										<tbody>
+										<tr>
+											<td>Investment profile title</td>
+											<td>Individual</td>
+										</tr>
+										<tr>
+											<td>CHESS HIN or SRN</td>
+											<td>Test</td>
+										</tr>
+										<tr>
+											<td>Contact Person</td>
+											<td>Bogdan</td>
+										</tr>
+										<tr>
+											<td>Email</td>
+											<td>test@text.com</td>
+										</tr>
+										<tr>
+											<td>Phone</td>
+											<td>+377 777 777 77</td>
+										</tr>
+										<tr>
+											<td>Amount</td>
+											<td>130$</td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
 						<p class="profile-text" style="margin-bottom: 30px;">You will need to pay a processing fee of $24.20 on the next screen. Visa Mastercard etc</p>
 						<div class="row profile-details-row justify-content-center">
 							<div class="col-lg-3">
