--- a/dashboard-investments.html
+++ b/dashboard-investments.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
@@ -138,45 +138,10 @@
 					</div>
 				</header>
 				<div class="dashboard-wrapper">
-					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
-						<div class="heading">
-							<h2>Hi Bogdan</h2>
-							<a href="dashboard-create-ip.html" class="btn-repeat dashboard-btn"><span>+</span> CREATE INVESTMENT PROFILE</a>
-						</div>
-					</div>
 					<div class="dashboard-row">
 						<div class="dashboard-repeat-title">
-							<h3>INVESTMENT PROFILES</h3>
+							<h3>My Investments</h3>
 						</div>
-						<div class="table-wrapper table-wrapper-profile">
-							<table class="dashboard-table">
-								<thead>
-								<tr>
-									<th style="width: 50%;">TITLE</th>
-									<th style="width: 16%">Type</th>
-									<th style="width: 16%"></th>
-									<th style="width: 16%" class="text-center">wholesale investor</th>
-								</tr>
-								</thead>
-								<tbody>
-								<tr>
-									<td><a href="#" class="table-link">Lorem Ipsum is simply dummy text of the printing and typesetting industry</a></td>
-									<td>Individual</td>
-									<td class="text-center"><span class="profile-status">ACTIVE PROFILE <i class="mdi mdi-approval"></i></span></td>
-									<td class="text-center text-uppercase">Yes</td>
-								</tr>
-								<tr>
-									<td><a href="#" class="table-link">Contrary to popular belief, Lorem Ipsum is not simply random text</a></td>
-									<td>Company</td>
-									<td class="text-center"><span class="profile-status">ACTIVE PROFILE <i class="mdi mdi-approval"></i></span></td>
-									<td class="text-center text-uppercase">No</td>
-								</tr>
-								</tbody>
-							</table>
-						</div>
-						<p class="profile-text">To invest in our offers you will need to create an investment profile</p>
-					</div>
-					<div class="dashboard-row">
 						<div class="table-wrapper">
 							<table class="dashboard-table">
 								<thead>
