--- a/offer.html
+++ b/offer.html
@@ -125,7 +125,7 @@
 						<div class="col-xl-3 col-md-5 offer-sidebar">
 							<img src="images/kleos.png" class="kleos-img img-fluid" alt="">
 							<div class="prospectus-wrapper">
-								<mark data-toggle="modal" data-target="#prospectus-modal">PROSPECTUS</mark>
+								<mark data-toggle="modal" data-target="#prospectus-modal"><i class="mdi mdi-file-pdf"></i> PROSPECTUS</mark>
 								<span class="offer-span">Share Price: <em>$0.20</em></span>
 								<span class="offer-span">Min PArcel: <em>$2,000</em></span>
 								<span class="offer-span">Type: <em>ORDINARY SHARE</em></span>
