--- a/dashboard-change-pass.html
+++ b/dashboard-change-pass.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Offer</span>
+							<span>Overview</span>
 						</a>
 					</li>
 					<li>
