FAQ page finished

--- a/dashboard-advisor.html
+++ b/dashboard-advisor.html
@@ -121,7 +121,7 @@
 								<a href="#">Blog</a>
 							</li>
 							<li>
-								<a href="#">Faq</a>
+								<a href="faq.html">Faq</a>
 							</li>
 						</ul>
 					</nav>
