--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
 								<a href="#">Blog</a>
 							</li>
 							<li>
-								<a href="#">Faq</a>
+								<a href="faq.html">Faq</a>
 							</li>
 						</ul>
 					</nav>
@@ -108,7 +108,7 @@
 							<a href="offer.html">investment offers</a>
 							<a href="media.html">media</a>
 							<a href="#">blog</a>
-							<a href="#">faq</a>
+							<a href="faq.html">Faq</a>
 						</nav>
 						<nav class="footer-other-nav">
 							<a href="contact.html">Contact</a>
