--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 								<a href="#">Blog</a>
 							</li>
 							<li>
-								<a href="#">Faq</a>
+								<a href="faq.html">Faq</a>
 							</li>
 						</ul>
 					</nav>
@@ -164,7 +164,7 @@
 							<a href="offer.html">investment offers</a>
 							<a href="media.html">media</a>
 							<a href="#">blog</a>
-							<a href="#">faq</a>
+							<a href="faq.html">Faq</a>
 						</nav>
 						<nav class="footer-other-nav">
 							<a href="contact.html" class="active">Contact</a>
