--- a/offer.html
+++ b/offer.html
@@ -51,7 +51,7 @@
 								<a href="#">Blog</a>
 							</li>
 							<li>
-								<a href="#">Faq</a>
+								<a href="faq.html">Faq</a>
 							</li>
 						</ul>
 					</nav>
@@ -133,7 +133,7 @@
 							<div class="sidebar-menu">
 								<a href="#" data-toggle="modal" data-target="#register-modal">Key Points / Overview</a>
 								<a href="#" data-toggle="modal" data-target="#reservation-modal">Board and MAnagement</a>
-								<a href="#">FAQ</a>
+								<a href="faq.html">Faq</a>
 								<a href="#">Deal Terms</a>
 								<a href="#">Videos</a>
 								<a href="#">News</a>
@@ -649,7 +649,7 @@
 							<a href="offer.html" class="active">investment offers</a>
 							<a href="media.html">media</a>
 							<a href="#">blog</a>
-							<a href="#">faq</a>
+							<a href="faq.html">Faq</a>
 						</nav>
 						<nav class="footer-other-nav">
 							<a href="contact.html">Contact</a>
